Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ layout: default
 
 <!-- Start Our team -->
 <div id="team" class="team"> 
-    <h2 class="section-title">PARTICIPA</h2> 
+    <h2 class="section-title">PARTICIP</h2> 
     <div id="team-carousel">
     {% for member in site.data.team %}
         <div class="expandable-box">
