--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
     <div class="hero-content">
         <div class="container-fluid">
             <div class="hero-content-inner">
-                <h1 class="editable">{{ site.hero.hero_title }}</h1>
+                <h1 class="editable">Test</h1>
                 <p>{{ site.hero.hero_description }}</p>
             </div>
         </div>
